# mless

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  justfile
e2e-tests/: pytest.ini  requirements.txt  test_config_file_reading.py  test_configuration.py  test_dummy.py  test_long_input.py  test_mode_switching.py  test_no_interaction.py  test_regex_mode.py  utils.py
e2e-tests/support_files/configs/: config_aaa_bbb.yaml  config_custom_mode_switcher.yaml  config_invalid_regex.yaml  config_match_test.yaml  config_match_test_custom_colors.yaml  config_match_test_various_color_formats.yaml
e2e-tests/support_files/configs/home_all_three_configs/: .mless.yaml
e2e-tests/support_files/configs/home_all_three_configs/.config/mless/: mless.yaml
e2e-tests/support_files/configs/home_all_three_configs/xdg_config_home/mless/: mless.yaml
scripts/changelog/: generate-changelog.py
src/: args.rs  error.rs  input_handler.rs  input_handling.rs  logging.rs  main.rs  pager.rs  render.rs  renderer.rs
src/app/: configuration_handling.rs  mod.rs  run.rs
src/configuration/: color.rs  config.rs  default_config.yaml  mod.rs  modes.rs
src/docs/: architecture.plantuml
src/hints/: mod.rs  pool_generator.rs
src/modes/: mod.rs  mode_selector.rs  regex.rs
src/modes/regex/: hint_hit_map.rs  tests.rs
src/modes/regex/tests/: tests_regex.rs
src/rendering/: ansi_sequence_extractor.rs  api_types.rs  mod.rs  renderer.rs
tmux/: README.md  mless.tmux  mless_tmux_stage_1.sh  mless_tmux_stage_2.sh  mless_wrapper.sh
