[package]
name = "mouseless-selector"
description = "CLI tool to make mouseless selection in the terminal easier."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
crossterm = "0.27.0"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
