[package]
name = "mless"
description = "CLI tool to make mouseless selection in the terminal easier."
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive", "wrap_help"] }
crossterm = "0.27.0"
env_logger = "0.11.3"
log = "0.4.21"
regex = "1.10.3"
serde = { version = "1.0.195", features = ["derive"] }
serde_yaml = "0.9.30"
snafu = "0.8.2"
textwrap = "0.16.2"

[dev-dependencies]
mockall = "0.12.1"
test-case = "3.3.1"

[lints.clippy]
expect_used = "deny"
unwrap_used = "deny"
panic = "deny"
unimplemented = "deny"
allow_attributes_without_reason = "deny"

[profile.release]
strip = true
